feat: add logout endpoint (#52)
